Fix grid wrap

--- a/styles/framework/generic/_reboot.scss
+++ b/styles/framework/generic/_reboot.scss
@@ -7,7 +7,6 @@
 *::after {
     box-sizing: inherit;
     background-repeat: no-repeat;
-    flex-shrink: 0;
     position: relative;
 }
 
