--- a/styles/framework/objects/_grids.scss
+++ b/styles/framework/objects/_grids.scss
@@ -5,6 +5,7 @@
 .#{$rowClass} {
     display: flex;
     flex-basis: 100%;
+    flex-wrap: wrap;
     margin: 0 auto;
     max-width: rem($maxWidth);
     padding: 0 rem($gutter);
